Start using java 17 and PowerNukkitX